@@ -96,8 +96,8 @@ ADD_MENU_SUBMENU_TEXT_ITEM("Settings",        "CONFIG_SUBMENU")
 ADD_MENU_SUBMENU_TEXT_ITEM("Themes",          "THEMES_SUBMENU")
 ADD_MENU_SUBMENU_TEXT_ITEM("Test File Menu",  "FILE_MENU")
 ADD_MENU_TEXT_ITEM("About Enlightenment",  __A_ABOUT, "")
-ADD_MENU_TEXT_ITEM("Help",                 __A_EXEC, ENLIGHTENMENT_BIN"/dox" ENLIGHTENMENT_ROOT"/E-docs")
-ADD_MENU_TEXT_ITEM("About this theme",     __A_EXEC, ENLIGHTENMENT_BIN"/dox" ENLIGHTENMENT_THEME"/ABOUT")
+ADD_MENU_TEXT_ITEM("Help",                 __A_EXEC, ENLIGHTENMENT_BIN"/dox" $EROOT"/E-docs")
+ADD_MENU_TEXT_ITEM("About this theme",     __A_EXEC, ENLIGHTENMENT_BIN"/dox" $ETHEME"/ABOUT")
 ADD_MENU_TEXT_ITEM("Restart",              __A_EXIT, "restart")
 ADD_MENU_TEXT_ITEM("Log Out",              __A_EXIT, "logout")
 END_MENU
